--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,3 +27,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/AIModule.AISystem]
 bAllowStrafing=True
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=True
+r.DefaultFeature.AutoExposure.Bias=0.700000
+
